+ Hibernate als Implementierung für JPA konfiguriert

--- a/my-first-app/conf/application.conf
+++ b/my-first-app/conf/application.conf
@@ -42,7 +42,16 @@ db.default.user=sa
 db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
+db.default.jndiName=DefaultDS
+
+# Specify the ddl generation pattern to use. Set to none to disable it 
+# (default to update in DEV mode, and none in PROD mode):
+# jpa.ddl=create-drop
+
+#
+jpa.default=defaultPersistenceUnit
+
+
 
 # Evolutions
 # ~~~~~
@@ -54,7 +63,7 @@ db.default.password=""
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
- ebean.default="models.*"
+# ebean.default="models.*"
 
 # Logger
 # ~~~~~
